# DotnetOsxDebuggingRepro

./: .gitignore  Readme.md
dotnet/: EntryPoint.cs
dotnet/Registration/: MyPlugin.rb  register.ps1
native/: CMakeLists.txt  CMakePresets.json  main.cpp
runtimes/: plugin.runtimeconfig.json
runtimes/dotnet-runtime-6.0.6-osx-arm64/: dotnet
runtimes/dotnet-runtime-6.0.6-osx-arm64/host/fxr/6.0.6/: libhostfxr.dylib
runtimes/dotnet-runtime-6.0.6-osx-arm64/shared/Microsoft.NETCore.App/6.0.6/: Microsoft.NETCore.App.deps.json  createdump  libSystem.Globalization.Native.dylib  libSystem.IO.Compression.Native.dylib  libSystem.Native.dylib  libSystem.Net.Security.Native.dylib  libSystem.Security.Cryptography.Native.Apple.dylib  libSystem.Security.Cryptography.Native.OpenSsl.dylib  libclrjit.dylib  libdbgshim.dylib  libhostpolicy.dylib  libmscordaccore.dylib  libmscordbi.dylib
runtimes/dotnet-runtime-6.0.6-osx-x64/: dotnet
runtimes/dotnet-runtime-6.0.6-osx-x64/host/fxr/6.0.6/: libhostfxr.dylib
runtimes/dotnet-runtime-6.0.6-osx-x64/shared/Microsoft.NETCore.App/6.0.6/: Microsoft.NETCore.App.deps.json  createdump  libSystem.Globalization.Native.dylib  libSystem.IO.Compression.Native.dylib  libSystem.Native.dylib  libSystem.Net.Security.Native.dylib  libSystem.Security.Cryptography.Native.Apple.dylib  libSystem.Security.Cryptography.Native.OpenSsl.dylib  libclrjit.dylib  libdbgshim.dylib  libhostpolicy.dylib  libmscordaccore.dylib  libmscordbi.dylib
runtimes/dotnet-runtime-6.0.6-win-x64/shared/Microsoft.NETCore.App/6.0.6/: .version  Microsoft.NETCore.App.deps.json
